--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -3,11 +3,10 @@
     max-width: 100%;
     height: 100vh;
     
-    overflow: hidden
+    overflow: hidden;
 }
 
 .light {
-    background-color: white !important;
     color: #060606;
     transition-duration: 0.7s;
     border-color: #060606;
@@ -15,7 +14,6 @@
 }
 
 .dark {
-    background-color: #060606 !important;
     color: white;
     transition-duration: 0.7s;
 }
@@ -118,6 +116,8 @@ z-index: 1;
 .blobDark {
     background: rgb(21,17,85);
 background: radial-gradient(circle, rgba(10, 3, 102, 0.307) 50%, rgba(119, 142, 255, 0.859) 100%);
+
+
 }
 
 .blobLight {
